--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "main": "index.js",
   "scripts": {
     "build": "run-s clean copy build:*",
-    "build:scss": "node-sass _src/scss/style.scss _dist/css/style.css",
-    "build:postcss": "postcss _dist/css/style.css -o _dist/css/style.css -m -u autoprefixer css-mqpacker csswring",
+    "build:scss": "node-sass --importer node_modules/node-sass-glob-importer/dist/cli.js -o build src/common/scss/apa.scss build/common/css/apa.css" ,
+    "build:postcss": "postcss build/common/css/apa.css -o build/common/css/apa.css -m -u autoprefixer css-mqpacker csswring",
+    "watch": "run-p watch:*",
+    "watch:scss": "node-sass src/common/scss/apa.scss build/common/css/apa.css -w",
+    "watch:postcss": "postcss build/common/css/apa.css -o build/common/css/apa.css -m -u autoprefixer css-mqpacker csswring -w",
+    "watch:static": "cpx src/**/*.html build -w",
+    "watch:image": "cpx src/**/*.{jpg,gif,png} build -w",
+    "dev": "run-p watch:scss",
     "copy": "run-p copy:*",
-    "copy:html": "cpx _src/**/*.html _dist",
-    "copy:image": "cpx _src/**/*.{img,gif,png} _dist",
-    "clean": "rimraf _dist"
+    "copy:html": "cpx src/**/*.html build",
+    "copy:content": "cpx src/**/*.{jpg,gif,png,mp4} build",
+    "copy:libcss": "cpx src/common/scss/lib/*.css build/common/css",
+    "copy:js": "cpx src/**/*.js build",
+    "clean": "rimraf build"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +30,7 @@
     "csswring": "^7.0.0",
     "glob": "^7.1.3",
     "node-sass": "^4.11.0",
+    "node-sass-glob-importer": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2",
     "rimraf": "^2.6.3"
